[package]
name = "multi-party-eddsa"
version = "0.2.1"
authors = [
    "Omer <omer@kzencorp.com>",
    "Gary <gary@kzencorp.com>"
]

[lib]
crate-type = ["rlib", "dylib"]

[dependencies]
curv = { git = "https://github.com/ZenGo-X/curv"}
hex = "0.3.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
